--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,6 @@ line-length = 100
 
 [tool.ruff]
 line-length = 100
-select = ["E","F","I","UP","B"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP", "B"]
